# Raytracer

./: CMakeLists.txt  README.md  compile.sh  compileAndRun.sh  compileAndTest.sh  main.cpp
include/core/: Base3Object.hpp  Color.hpp  Point3.hpp  Ray.hpp  Utils.hpp  Vector3.hpp
include/scene/: Camera.hpp  OrthonormalBasis.hpp  View.hpp
include/shape/: Sphere.hpp
include/shape/base/: HitRecord.hpp  HittableList.hpp  IHittable.hpp
include/shape/material/: IMaterial.hpp  Matte.hpp  Metal.hpp
src/: CMakeLists.txt
src/core/: Base3Object.cpp  CMakeLists.txt  Color.cpp  Point3.cpp  Ray.cpp  Utils.cpp  Vector3.cpp
src/scene/: CMakeLists.txt  Camera.cpp
src/shape/: CMakeLists.txt  Sphere.cpp
src/shape/base/: CMakeLists.txt  HittableList.cpp
src/shape/material/: CMakeLists.txt  Matte.cpp  Metal.cpp
test/: CMakeLists.txt  TestUtils.hpp  main.cpp
test/core/: Base3ObjectTests.cpp  ColorTests.cpp  Point3Tests.cpp  RayTests.cpp  UtilsTests.cpp  Vector3Tests.cpp
test/scene/: CameraTests.cpp
test/shape/: SphereTests.cpp
test/shape/base/: HitRecordTests.cpp  HittableListTests.cpp
